# hyper-staticfile2

./: Cargo.toml  LICENSE  README.md
examples/: doc_server.rs  include_dir.rs
src/: body.rs  lib.rs  resolve.rs  response_builder.rs  service.rs  vfs.rs
src/util/: file_bytes_stream.rs  file_response_builder.rs  mod.rs  requested_path.rs
