[package]
name = "hyper-staticfile"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
http = "1"
httpdate = "1"
http-range = "0.1"
hyper = "1"
mime_guess = "2"
tokio = { version = "1", features = ["fs"] }
percent-encoding = "2"
rand = "0.9"
include_dir = "0.7"

[dev-dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
